--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/styles.min.css" rel="stylesheet">
   <title>Шаблон</title>
 </head>
+
 <body>
+  <h1 class="hello-world">Hello, World!!!</h1>
 </body>
+
 </html>
