--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,9 @@
   <title>Шаблон</title>
 </head>
 
-<body>
-  <h1 class="hello-world">Hello, World!!!</h1>
+<body class="hello-world">
+  <h1 class="hello-world__title">Hello, World!!!</h1>
+  <p class="hello-world__text"></p>
 </body>
 
 </html>
